// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaFrame renders empty 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-dqBHgY eVMXHH"
      >
        <table
          class="sc-hgRTRy ldnbjm"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-iIHSe bAdqZs table-row"
            >
              <td
                class="sc-feryYK iImUoj table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="sc-hgRTRy ldnbjm"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-iIHSe bAdqZs table-row"
            >
              <td
                class="sc-feryYK iImUoj table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders empty for Neo4j >= 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-dqBHgY eVMXHH"
      >
        <table
          class="sc-hgRTRy ldnbjm"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                Index Name
              </th>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                Type
              </th>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                Uniqueness
              </th>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                EntityType
              </th>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                LabelsOrTypes
              </th>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                Properties
              </th>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                State
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-iIHSe bAdqZs table-row"
            >
              <td
                class="sc-feryYK iImUoj table-properties"
              >
                None
              </td>
              <td
                class="sc-feryYK iImUoj table-properties"
              />
              <td
                class="sc-feryYK iImUoj table-properties"
              />
              <td
                class="sc-feryYK iImUoj table-properties"
              />
              <td
                class="sc-feryYK iImUoj table-properties"
              />
              <td
                class="sc-feryYK iImUoj table-properties"
              />
              <td
                class="sc-feryYK iImUoj table-properties"
              />
            </tr>
          </tbody>
        </table>
        <table
          class="sc-hgRTRy ldnbjm"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-iIHSe bAdqZs table-row"
            >
              <td
                class="sc-feryYK iImUoj table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders results for Neo4j < 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-dqBHgY eVMXHH"
      >
        <table
          class="sc-hgRTRy ldnbjm"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-iIHSe bAdqZs table-row"
            >
              <td
                class="sc-feryYK iImUoj table-properties"
              >
                 ON :Movie(released) ONLINE 
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="sc-hgRTRy ldnbjm"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-gldTML jPArlV table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-iIHSe bAdqZs table-row"
            >
              <td
                class="sc-feryYK iImUoj table-properties"
              >
                 ON ( book:Book ) ASSERT book.isbn IS UNIQUE
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;
